# sample-rust-function

./: Cargo.toml  Dockerfile
src/: main.rs
